--- a/templates/create/essay.html
+++ b/templates/create/essay.html
@@ -1,1 +1,18 @@
-{% extends './create.html' %}
+{% extends 'create/_base.html' %}
+{% block content %}
+
+<div class="input-field col s10">
+  <input id="question" name="question" type="text" class="validate" pattern="[^.!?]+\?" required>
+  <label for="question" data-error="wrong" data-success="right">QUESTION</label>
+</div>
+<div class="col s1"><br></div>
+
+{% if isTest %}
+  <div class="input-field col s4">
+    <input id="points" name="points" type="number" class="validate" min="0" max="100" required>
+    <label for="points" data-error="wrong" data-success="right">POINTS</label>
+  </div>
+  <div class="col s1"><br></div>
+{% endif %}
+
+{% endblock %}
