--- a/templates/create/_base.html
+++ b/templates/create/_base.html
@@ -20,7 +20,7 @@
   <div class="col s1"><br><br></div>
 
   <div class="row">
-    <form class="col s12" id="form" method="POST">
+    <form class="col s12" id="form" name="form" method="POST">
 
       {% block content %}
       {% endblock %}
