--- a/templates/create/base.html
+++ b/templates/create/base.html
@@ -10,6 +10,7 @@
   <link href="../static/css/parallax.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
+  
   <script type="text/javascript">
       if (parent.location==location) {
           location.href = "/dash"
@@ -31,22 +32,23 @@
   <p class="right">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
   <button class="btn waves-effect waves-light cyan right" type="submit" name="action" form="form">ADD QUESTION</button>
 
-  <footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-    <script src="../static/js/parallax.min.js"></script>
-    <script>
-      (function($){
-        $(function(){
-          $('.sidenav').sidenav();
-          $('.parallax').parallax();
-        });
-        $(document).ready(function(){
-          $('.modal').modal();
-          $('select').formSelect();
-        });
-      })(jQuery);
-    </script
-  </footer>
+<footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+  <script src="../static/js/parallax.min.js"></script>
+  <script>
+    (function($){
+      $(function(){
+        $('.sidenav').sidenav();
+        $('.parallax').parallax();
+      });
+      $(document).ready(function(){
+        $('.modal').modal();
+        $('select').formSelect();
+      });
+    })(jQuery);
+  </script>
+</footer>
+
 </body>
 </html>
