--- a/templates/create/trueFalse.html
+++ b/templates/create/trueFalse.html
@@ -1,8 +1,8 @@
-{% extends 'create/_base.html' %}
+{% extends 'create/base.html' %}
 {% block content %}
 
 <div class="input-field col s10">
-  <input id="question" name="question" type="text" class="validate" pattern="[^.!?]+\?" required>
+  <input id="question" name="question" type="text" class="validate" pattern="[^.!?]+((\.)|(\!)|(\?))" required>
   <label for="question" data-error="wrong" data-success="right">QUESTION</label>
 </div>
 <div class="col s1"><br></div>
