--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container">
-  <a href="/login" class="waves-effect waves-light btn-large blue">Google Sign in</a>
+<div class="row s12"><br><br><br></div>
+<h2 class="center grey-text">WELCOME TO BROCKHAMPTON FORMS!</h2>
+<h3 class="center grey-text text-lighten-1">INSPIRED BY SATURATION III</h3>
+<div class="row s12"><br></div>
+<div class="row s12 center"><img src="static/img/SATURATION III.jpg" height="500px" width="500px"></div>
+<div class="row s12"><br></div>
+<div class="row s12 center">
+  <a class="waves-effect waves-light btn-large blue" href="/login">Google Sign in</a>
 </div>
 
 {% endblock %}
