--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 <div class="row s12">
   <div class="col s3"></div>
   <div class="col s3"><h1 class="grey-text text-darken-1">404</h1><h3 class="grey-text"><br>IMMA LET YOU FINISH,<br>BUT THE PAGE YOUR LOOKING FOR<br>CAN'T BE FOUND</h3></div>
-  <div class="col s4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="static/img/kanye.png"></div>
+  <div class="col s4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{url}}"></div>
 </div>
 <div class="row s12 center">
   <div class="col s4 center"></div>
