--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h2 class="center grey-text">WELCOME TO BROCKHAMPTON FORMS!</h2>
 <h3 class="center grey-text text-lighten-1">INSPIRED BY SATURATION III</h3>
 <div class="row s12"><br></div>
-<div class="row s12 center"><img src="static/img/SATURATION III.jpg" height="500px" width="500px"></div>
+<a href="https://www.youtube.com/watch?v=GtCa-f7X2T8&list=PL0yl8xyfoNzHB9_y67Rjr2EuLakOcCyjc" target="_blank"><div class="row s12 center"><img src="static/img/SATURATION III.jpg" height="500px" width="500px"></div></a>
 <div class="row s12"><br></div>
 <div class="row s12 center">
   <a class="waves-effect waves-light btn-large blue" href="/login">Google Sign in</a>
